<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".PreviewFragment">
    <!--android:fitsSystemWindows="true" -->

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/submitButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/scrollableContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/image_text" />


            <Button
                android:id="@+id/replacePhotoButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Replace photo"
                android:backgroundTint="#8D504072"
                app:layout_constraintTop_toBottomOf="@id/imageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/editPhotoButton"
                app:layout_constraintWidth_percent="0.4"
                />

            <Button
                android:id="@+id/editPhotoButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/edit_button_text"
                android:backgroundTint="#8D504072"
                app:layout_constraintTop_toBottomOf="@id/imageView"
                app:layout_constraintStart_toEndOf="@id/replacePhotoButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintWidth_percent="0.4"/>

            <TextView
                android:id="@+id/descriptionViewLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/editPhotoButton"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:text="Description"
                android:textStyle="bold"
                android:labelFor="@id/imageDescriptionEditText">

            </TextView>

            <EditText
                android:id="@+id/imageDescriptionEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/caption_field_text"
                android:layout_marginHorizontal="16dp"
                app:layout_constraintTop_toBottomOf="@id/descriptionViewLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="16sp"
                android:gravity="top" />

            <TextView
                android:id="@+id/peopleViewLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/imageDescriptionEditText"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:text="People in the photo"
                android:textStyle="bold"
                android:labelFor="@id/nameInputLayout">

            </TextView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintTop_toBottomOf="@id/peopleViewLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/addNameButton"
                app:layout_constraintWidth_percent="0.7">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tag_field_text"
                    android:inputType="text"
                    android:textSize="15sp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/addNameButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/add_button_text"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:backgroundTint="#6B383838"
                app:layout_constraintTop_toBottomOf="@id/peopleViewLabel"
                app:layout_constraintStart_toEndOf="@id/nameInputLayout"
                app:layout_constraintWidth_percent="0.2"/>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/namesChipGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                app:chipSpacingVertical="0dp"
                app:layout_constraintTop_toBottomOf="@id/nameInputLayout"
                app:singleLine="false">

            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:id="@+id/locationViewLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/namesChipGroup"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:text="Location"
                android:labelFor="@id/locationView"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:id="@+id/locationView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/locationViewLabel"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                android:text="@string/location_text_default">

            </TextView>

            <com.google.android.gms.maps.MapView
                android:id="@+id/mapView"
                android:layout_width="0dp"
                android:layout_height="150dp"
                app:layout_constraintTop_toBottomOf="@id/locationView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


    <Button
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_button_text"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>